--- a/styles/style.css
+++ b/styles/style.css
@@ -191,7 +191,7 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
-  text-align: center
+  text-align: center;
 }
 
 .feynman__subtitle {
