--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@
   display: flex;
   width: 730px;
   align-items: center;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   z-index: 2;
   line-height: 96px;
   font-size: 102px;
@@ -65,13 +65,16 @@
   color: #2f80ed;
 }
 
+.logo {
+  width: 183px;
+}
+
 .logo_place_header {
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 2;
+  z-index: 3;
   height: 32px;
-  width: 183px;
 }
 
 .description {
@@ -105,11 +108,11 @@
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
-  margin: 0;
+  margin: 0 0 30px 0;
 }
 
-.two-columns__paragraph_center {
-  padding: 30px 0;
+.two-columns__paragraph:last-child {
+  margin: 0;
 }
 
 .two-columns__span-accent {
@@ -230,62 +233,35 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  background-color:  #000;
-  z-index: -1;
+  background-color: #1f1f1f;
   position: relative;
 }
 
 .section-title_theme_dark {
-  width: 60%;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: bold;
-  margin: 0;
-  display: flex;
-  justify-content: center;
   color: #fff;
+  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
-  width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  padding-top: 20px;
   color: #fff;
+  z-index: 2;
 }
 
 .table_theme_dark {
-  width: 1100px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  z-index: 1;
+  z-index: 2;
 }
 
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-  display: flex;
-  flex-direction: column;
+    margin-top: 80px;
 }
 
 .table__heading_theme_dark {
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
-  margin: 0;
+  color: white;
 }
 
 .table__text_theme_dark {
-  line-height: 1.2;
-  font-size: 18px;
-  margin: 0;
-  padding-top: 20px;
+  color: white;
 }
 
 .kaufman__triangle {
@@ -296,14 +272,14 @@
   right: -210px;
   top: 0;
   background-size: contain;
+  z-index: 1;
 }
 
 .footer {
-  background-color: #000;
+  background-color: #1f1f1f;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color:#fff;
   min-height: 350px;
 }
 
@@ -315,16 +291,19 @@
   flex-grow: 1;
 }
 
-.footer__column_content_copyright {
+.footer__column {
   display: flex;
   flex-direction: column;
+  color: #fff;
+}
+
+.footer__column_content_copyright {
   flex-basis: 711px;
   justify-content: space-between;
 }
 
 .logo_place_footer {
   height: 35px;
-  width: 183px;
 }
 
 .footer__author {
@@ -335,35 +314,25 @@
 }
 
 .footer__column_content_info {
-  display: flex;
-  flex-direction: column;
+  line-height: 30px;
+  font-size: 18px;
 }
 
 .footer__column-heading {
   margin: 0;
-  line-height: 30px;
-  font-size: 18px;
   font-weight: bold;
   padding-bottom: 20px;
-
 }
 
 .footer__column-links {
-  margin: 0;
   padding: 0 0 16px 0;
   list-style: none;
-}
-
-.footer__column-link_page {
-  color:#fff;
-  text-decoration: none;
-  line-height: 30px;
-  font-size: 18px;
+  margin: 0;
 }
 
 .footer__column_content_social {
-  display: flex;
-  flex-direction: column;
+  line-height: 30px;
+  font-size: 18px;
 }
 
 .footer__social-icon {
@@ -374,13 +343,7 @@
 
 .footer__column-link {
   margin: 0;
-  padding: 0 0 16px 0;
-  list-style: none;
+  color: #fff;
+  text-decoration: none;
 }
 
-.footer__column-link_website {
-  color:#fff;
-  text-decoration: none;
-  line-height: 30px;
-  font-size: 18px;
-}
